# metadata-editor

./: README.md  pyproject.toml
docs/: USAGE.md
metadata_editor/: __init__.py  cli.py
