[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metadata-editor"
version = "0.1.0"
description = "Interactive CLI for editing image metadata"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "Pillow>=10.0.0",
  "piexif>=1.1.3",
]

[project.scripts]
metadata-editor = "metadata_editor.cli:main"
